@@ -35,13 +35,6 @@ import os
 from setuptools import setup, find_packages
 
 
-if not os.access('scripts/clubak', os.F_OK):
-    os.symlink('clubak.py', 'scripts/clubak')
-if not os.access('scripts/clush', os.F_OK):
-    os.symlink('clush.py', 'scripts/clush')
-if not os.access('scripts/nodeset', os.F_OK):
-    os.symlink('nodeset.py', 'scripts/nodeset')
-
 if os.geteuid() == 0:
     # System-wide, out-of-prefix config install (rpmbuild or pip as root)
     CFGDIR = '/etc/clustershell'
@@ -49,33 +42,35 @@ else:
     # User, in-prefix config install (rpmbuild or pip as user)
     CFGDIR = 'etc/clustershell'
 
-VERSION='1.7.2'
+VERSION = '1.7.2'
 
 setup(name='ClusterShell',
       version=VERSION,
       package_dir={'': 'lib'},
       packages=find_packages('lib'),
-      data_files = [(CFGDIR,
-                     ['conf/clush.conf',
-                      'conf/groups.conf',
-                      'conf/topology.conf.example']),
-                    (os.path.join(CFGDIR, 'groups.conf.d'),
-                     ['conf/groups.conf.d/genders.conf.example',
-                      'conf/groups.conf.d/slurm.conf.example',
-                      'conf/groups.conf.d/README']),
-                    (os.path.join(CFGDIR,'groups.d'),
-                     ['conf/groups.d/cluster.yaml.example',
-                      'conf/groups.d/local.cfg',
-                      'conf/groups.d/README'])],
-      scripts=['scripts/clubak',
-               'scripts/clush',
-               'scripts/nodeset'],
+      data_files=[(CFGDIR,
+                   ['conf/clush.conf',
+                    'conf/groups.conf',
+                    'conf/topology.conf.example']),
+                  (os.path.join(CFGDIR, 'groups.conf.d'),
+                   ['conf/groups.conf.d/genders.conf.example',
+                    'conf/groups.conf.d/slurm.conf.example',
+                    'conf/groups.conf.d/README']),
+                  (os.path.join(CFGDIR, 'groups.d'),
+                   ['conf/groups.d/cluster.yaml.example',
+                    'conf/groups.d/local.cfg',
+                    'conf/groups.d/README'])],
+      entry_points={'console_scripts':
+                    ['clubak=ClusterShell.CLI.Clubak:main',
+                     'clush=ClusterShell.CLI.Clush:main',
+                     'nodeset=ClusterShell.CLI.Nodeset:main'],
+                   },
       author='Stephane Thiell',
       author_email='sthiell@stanford.edu',
       license='CeCILL-C (French equivalent to LGPLv2+)',
       url='http://clustershell.sourceforge.net/',
       download_url='http://sourceforge.net/projects/clustershell/files/'
-        'clustershell/%s/' % VERSION,
+                   'clustershell/%s/' % VERSION,
       platforms=['GNU/Linux', 'BSD', 'MacOSX'],
       keywords=['clustershell', 'clush', 'clubak', 'nodeset'],
       description='ClusterShell library and tools',
